--- a/DaoBlissWebApp/Pages/ProductDetail.cshtml
+++ b/DaoBlissWebApp/Pages/ProductDetail.cshtml
@@ -2,26 +2,29 @@
 @model DaoBlissWebApp.Pages.ProductDetailModel
 @{
     <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <title>
-            DaoBliss Product Page
-        </title>
-        <script src="https://cdn.tailwindcss.com">
-        </script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&amp;family=Roboto&amp;display=swap" rel="stylesheet" />
-        <style>
-            body {
-                font-family: "Roboto", sans-serif;
-            }
+        <head>
+            <meta charset="utf-8" />
+            <meta content="width=device-width, initial-scale=1" name="viewport" />
+            <title>
+                DaoBliss Product Page
+            </title>
+            <script src="https://cdn.tailwindcss.com">
+            </script>
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+            <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&amp;family=Roboto&amp;display=swap" rel="stylesheet" />
+            <style>
+                body {
+                    font-family: "Roboto", sans-serif;
+                }
 
-            .font-playfair {
-                font-family: "Playfair Display", serif;
-            }
-        </style>
-    </head>
+                .font-playfair {
+                    font-family: "Playfair Display", serif;
+                }
+            </style>
+            <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
+            <script src="https://files.bpcontent.cloud/2025/07/11/08/20250711083358-FVA851WT.js" defer></script>
+
+        </head>
     <body class="bg-white">
         <!-- Header -->
         <header class="bg-[url('/images/background.jpg')] bg-cover bg-no-repeat">
@@ -95,7 +98,7 @@
                 </div>
                 <div class="w-full md:w-1/2 mt-8 md:mt-0">
                     <h1 class="font-playfair text-4xl text-black mb-3 leading-tight" style="line-height: 1.1">
-                        Sản phẩm 1
+                        Cao tắm cô đặc
                     </h1>
                     <div class="flex space-x-2 mb-2">
                         <i class="fas fa-star text-yellow-400 text-3xl">
